k8s/pinponfel/airflow/02-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls: 
  - hosts:
    - airflow.felagonell.com
    secretName: airflow-tls-secret
  rules:
  - host: airflow.felagonell.com
    http:
      paths:
      - backend:
          serviceName: airflow-svc
          servicePort: 8080
        path: /
